# pdl-api

./: Makefile  README.md  pyproject.toml
pdl_api/: __init__.py  person_api.py
pdl_api/models/: exceptions.py  person.py  response.py
tests/: test_pdl_schema.py  test_queries.py
tests/examples/: error_example.json  person_example.json
